# sfiii-gym

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs-build-and-deploy.yaml  package-publish.yaml  pytest.yaml
docker/: Dockerfile
docs/source/: conf.py  index.rst
docs/source/API/: module_1.rst  module_2.rst
docs/source/section_1/: index.rst  page_1.rst
docs/source/section_2/: page_1.rst
examples/: run_env.py  run_vizdoom.py
src/project_name/: agents.py  cli.py  utils.py
src/project_name/data/: actions_mapping.json
src/sfiii_gym/: __init__.py  actions.py  environment.py  steps.py
stubs/MAMEToolkit/: emulator.pyi
tests/: test_agents.py
tests/integration/: test_env_run.py  test_gym_api.py
tests/unit/: test_actions.py  test_steps.py
