[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sfiii-gym"
version = "0.1.0"
keywords = [
    "street-fighter",
    "sfiii",
    "gymnasium",
    "reinforcement-learning",
    "fighting-game",
    "arcade",
]
maintainers = [
  { name="Alessandro Palmas", email="alex@artificialtwin.com" },
]
authors = [
  { name="Alessandro Palmas", email="alex@artificialtwin.com" },
]
description = "Gymnasium environment for Street Fighter III: 3rd Strike using the MAME emulator"
readme = { file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENSE"]

requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Added with `uv add package_name`
dependencies = [
    "gymnasium>=1.2.3",
    "mametoolkit>=1.1.0",
]

# Added with `uv add --group dev package_name`
[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.12",
    "twine>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/alexpalms/sfiii-gym"
Issues = "https://github.com/alexpalms/sfiii-gym/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sfiii_gym = ["py.typed", "data/*"]

[tool.pyright]
include = ["src", "examples", "tests"]
typeCheckingMode = "strict"
reportUnusedVariable = "error"
reportMissingImports = "error"
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportUntypedFunctionDecorator = "error"
reportMissingTypeStubs = "error"
stubPath = "stubs"
exclude = []

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = []

[tool.ruff.lint]
select = [
  "E", "F", "UP", "I", "B", "N", "S", "A", "C4", "T20"
]
ignore = ["E501", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"src/**/__init__.py" = ["D104", "D107"]  # ignore module and __init__ docstrings
"examples/**" = ["T20"]  # allow print in examples
"tests/**" = ["S101"]  # allow asserts in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--cov=src/sfiii_gym",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "-v"
]

[tool.coverage.run]
source = ["src"]
omit = []

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
